# cleanbot

./: README.md
cleanbot/: README.md  package.xml  setup.cfg  setup.py
cleanbot/behaviour_trees/: coverage_bt.xml  mapping_bt.xml
cleanbot/cleanbot/: coverage.py  gui_coverage.py
cleanbot/launch/: automapping.launch.py  bringup.launch.py  coverage_planning.launch.py
cleanbot/params/: mapping_params.yaml  physical_bot_params.yaml  sim_params.yaml
mts_department/: CMakeLists.txt  package.xml
mts_department/maps/: map.pgm  map.yaml
mts_department/models/blue_trash_can/: model.sdf
mts_department/models/dynamic_obstacle/: model.sdf
mts_department/models/first_2015_trash_can/: model.config  model.sdf
mts_department/models/flower_pot/: model.config  model.sdf
mts_department/models/flower_pot/meshes/: flower_pot.dae  flower_pot.stl
mts_department/models/locker/: model.config  model.sdf
mts_department/models/locker/meshes/: locker.dae  locker.stl
mts_department/models/mts_dept/: model.config  model.sdf
mts_department/models/plant_wooden_box/: model.config  model.sdf
mts_department/models/plant_wooden_box/meshes/: plant_wooden_box.dae  plant_wooden_box.stl
mts_department/models/reception_desk/: model.config  model.sdf
mts_department/models/reception_desk/meshes/: reception_desk.dae  reception_desk.stl
mts_department/models/small_box/: model.sdf
mts_department/models/waiting_chair/: model.config  model.sdf
mts_department/models/waiting_chair/meshes/: waiting_chair.dae
mts_department/models/waiting_chair_2/: model.config  model.sdf
mts_department/models/waiting_chair_2/meshes/: waiting_chair_2.dae  waiting_chair_2.stl
mts_department/worlds/: mts_dept.world
