<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cleanbot</name>
  <version>0.0.0</version>
  <description>Implementation using Opennav Coverage Planning Package</description>
  <maintainer email="mwasifraza10@gmail.com">M Wasif Raza</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bringup</depend>
  <depend>opennav_coverage_msgs</depend>
  <depend>opennav_coverage_bt</depend>
  <depend>opennav_coverage</depend>
  <depend>opennav_row_coverage</depend>
  <depend>opennav_coverage_navigator</depend>
  <depend>backported_bt_navigator</depend>
  <depend>mts_department</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
