<?xml version="1.0"?>
<package format="2">
  <name>mts_department</name>
  <version>1.0.0</version>
  <description>
    Contains gazebo world resembling Mechatronics Department of NUST CEME 
  </description>
  <license>Apache 2.0</license>
  <author email="mwasifraza10@gmail.com">M Wasif Raza</author>
  <maintainer email="mwasifraza10@gmail.com">M Wasif Raza</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
   <build_type>ament_cmake</build_type>
   <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
